<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="alpha_value">Transparency value:</string>
    <string name="app_name">DNP</string>
    <string name="blue">Blue</string>
    <string name="brush_size_old_tablet">Brush size (old tablet):</string>
    <string name="brush_size">Brush size:</string>
    <string name="choose_color">Choose color</string>
    <string name="choose_scenario">Choose scenario</string>
    <string name="clear">CLEAR</string>
    <string name="clear_lower">Clear</string>
    <string name="color_chooser_dialog_message">Choose a color:</string>
    <string name="color_chooser_dialog_title">Color chooser</string>
    <string name="dark_brown">Dark Brown</string>
    <string name="dark_green">Dark Green</string>
    <string name="dnp_sun">DNP SUN</string>
    <string name="draw_button_title">Start drawing</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="erase_mode_text">Erase mode:</string>
    <string name="erase">Erase</string>
    <string name="green">Green</string>
    <string name="grey">Grey</string>
    <string name="hollow_text">Hollow mode:</string>
    <string name="light_brown">Light Brown</string>
    <string name="light_green">Light Green</string>
    <string name="load_dialog_message">Load drawing from device Gallery ?</string>
    <string name="load_dialog_title">Load drawing</string>
    <string name="load">Load</string>
    <string name="new_dialog_message">Start new drawing ? (you will lose the current drawing)</string>
    <string name="new_dialog_title">New drawing</string>
    <string name="nothing_to_redo">Nothing to redo!</string>
    <string name="nothing_to_undo">Nothing to undo!</string>
    <string name="no_color_chosen">No color chosen, check your scenario!</string>
    <string name="old_tablet_mode">Compatibility mode:</string>
    <string name="paint">Color</string>
    <string name="pressure_text">Pressure mode:</string>
    <string name="red">Red</string>
    <string name="redo">Redo last draw</string>
    <string name="reset">Reset</string>
    <string name="reset_color_order">Reset color order</string>
    <string name="save_dialog_ko">Oops ! Image could not be saved.</string>
    <string name="save_dialog_message">Save drawing to device Gallery ?</string>
    <string name="save_dialog_ok">Drawing saved to Gallery !</string>
    <string name="save_dialog_title">Save drawing</string>
    <string name="save">Save</string>
    <string name="scenario_button_title">Choose or create a scenario</string>
    <string name="scenario_draw">Draw</string>
    <string name="scenario_load">Load a scenario</string>
    <string name="scenario_new">New scenario</string>
    <string name="scenario_new_dialog_message">Start new scenario ? (You will lose current modification)</string>
    <string name="scenario_save">Save the scenario</string>
    <string name="scenario_save_dialog_instruction">Please enter the name of the scenario:</string>
    <string name="sizer_button_title">Calibrate the application</string>
    <string name="sizer_dialog_title">Sizer</string>
    <string name="sizer_instructions">Use your index finger to touch the white square below.\nThen use the slider to set the black circle at the wanted size which should fit the size of a circle drawn by your finger.\n(Black square size is a suggestion)</string>
    <string name="start_new">New</string>
    <string name="step_delete">To delete step</string>
    <string name="step_hollow">Hollow</string>
    <string name="step_syllable">Syllable</string>
    <string name="step_text_linked_down">LINKED</string>
    <string name="step_title">STEP</string>
    <string name="step_underline">Underline</string>
    <string name="title_activity_drawing_zone">Drawing Zone</string>
    <string name="title_activity_scenario_chooser">Create a scenario</string>
    <string name="touch_size_text">Touch size mode:</string>
    <string name="underline_text">Underline mode:</string>
    <string name="undo">Cancel last draw</string>
    <string name="yellow">Yellow</string>
</resources>
