<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/undo_btn"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/undo"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/redo_btn"
        android:icon="@drawable/ic_menu_unrevert"
        android:title="@string/redo"
        android:showAsAction="ifRoom"/>


    <item
        android:id="@+id/reset_color_order_btn"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/reset_color_order"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/new_btn"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/start_new"
        android:showAsAction="ifRoom"/>


    <item
        android:id="@+id/save_btn"
        android:title="@string/save"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom"/>


    <item
        android:id="@+id/load_btn"
        android:title="@string/load"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/choose_color_btn"
        android:title="@string/choose_color"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="ifRoom"/>
</menu>