<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ok_btn"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/scenario_draw"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/save_btn"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />


    <item
        android:id="@+id/load_btn"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/load"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/new_btn"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/erase"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />


</menu>