<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#FFCCCCCC"
android:orientation="vertical"
tools:context=".MainActivity" >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="top|center_horizontal"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/new_pic" />


        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/brush" />


        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser" />


        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/save"
            android:src="@drawable/save" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/hollow_text"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/black"/>
            <Switch
                android:id="@+id/hollow_color"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:onClick="hollowClicked" />
        </LinearLayout>

    </LinearLayout>

    <com.tacitus.dnp.widget.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF660000"/>
            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFF0000"/>
            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFF6600"/>
            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFFCC00"/>
            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF009900"/>
            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF009999"/>
            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF0000FF"/>
            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF990099"/>
            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFF6666"/>
            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FFFFFFFF"/>
            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF787878"/>
            <ImageView
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="#FF000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <RadioGroup android:id="@+id/toggleGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <RadioButton
                android:id="@+id/color_brown"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FF660000" />

            <RadioButton
                android:id="@+id/color_red"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FFFF0000" />

            <RadioButton
                android:id="@+id/color_orange"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FFFF6600" />

            <RadioButton
                android:id="@+id/color_yellow"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FFFFCC00" />

            <RadioButton
                android:id="@+id/color_green"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FF009900" />

            <RadioButton
                android:id="@+id/color_cyan"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FF009999" />


            <RadioButton
                android:id="@+id/color_blue"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FF0000FF" />

            <RadioButton
                android:id="@+id/color_violet"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FF990099" />

            <RadioButton
                android:id="@+id/color_pink"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FFFF6666" />

            <RadioButton
                android:id="@+id/color_white"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FFFFFFFF" />

            <RadioButton
                android:id="@+id/color_grey"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FF787878" />

            <RadioButton
                android:id="@+id/color_black"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="2dp"
                android:background="@drawable/color_selector"
                android:contentDescription="@string/paint"
                android:onClick="paintClickedToggle"
                android:button="@null"
                android:tag="#FF000000" />
            </RadioGroup>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>